src/objects/Vacancy__c.object
<CustomObject>
    <fields>
        <fullName>HRM__c</fullName>
        <label>HRM</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Salary__c</fullName>
        <label>Maximum Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vacancy_Status__c</fullName>
        <label>Vacancy Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Vacancy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vacancy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vacancies</pluralLabel>
    <recordTypes>
        <fullName>Request</fullName>
        <active>true</active>
        <label>Request record type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vacancy</fullName>
        <active>true</active>
        <label>Vacancy record type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>